Implemented Auto Wrap action:
A plugin that rewraps the text of a subtitle
into lines of a maximum number of characters.

--- a/configure.ac
+++ b/configure.ac
@@ -334,6 +334,7 @@ plugins/actions/Makefile
 plugins/actions/about/Makefile
 plugins/actions/adjusttime/Makefile
 plugins/actions/applytranslation/Makefile
+plugins/actions/autowrap/Makefile
 plugins/actions/bestfit/Makefile
 plugins/actions/changeframerate/Makefile
 plugins/actions/clipboard/Makefile
