Debugging: enable profiling by default in debug and debug code cleanup
This also makes debug-help show when --help-all is called or --help-debug, not cluttering the normal help view. Also refactored the code a bit to avoid duplication, added descriptions etc.

--- a/configure.ac
+++ b/configure.ac
@@ -265,7 +265,7 @@ fi
 # profile options (default no)
 
 AC_ARG_ENABLE(profile,
-							[AC_HELP_STRING([--enable-profile], [turn on profiling [default=no]])],,
+							[AC_HELP_STRING([--enable-profile], [turn on gprof profiling [default=no]])],,
 							[enable_profile=no])
 
 if test "$enable_profile" = "yes"; then
