Fix menu labels (FIXMEs, missing, grammar, make them clearer)
Added FIXMEs and missing menu labels (the ones shown in status bar),
fixed grammar and made them clearer.

--- a/plugins/actions/documentsnavigation/documentsnavigation.se-plugin.in
+++ b/plugins/actions/documentsnavigation/documentsnavigation.se-plugin.in
@@ -1,6 +1,6 @@
 [SubtitleEditor Extension]
-_Name=Documents Navigation
-_Description=FIXME.
+_Name=Tab Navigation
+_Description=Adds actions to select tabs.
 Categorie=action
 Hidden=false
 Type=module
