--- a/plugins/actions/textcorrection/textcorrection.se-plugin.in
+++ b/plugins/actions/textcorrection/textcorrection.se-plugin.in
@@ -1,6 +1,6 @@
 [SubtitleEditor Extension]
 _Name=Text Correction
-_Description=FIXME
+_Description=Provides tools to automatically common errors in subtitle text cause by people or by OCR software.
 Categorie=action
 Type=module
 Module=textcorrection
